# salary-prediction

./: .pre-commit-config.yaml  README.md  pyproject.toml
core/: __init__.py  embedding_models.py
core/models/: __init__.py  base_model.py  catboost_model.py  clustering_model.py  lightning_model.py  linear_regression.py  tools.py
models/: model_loader.py
notebooks/: EDA.ipynb  clustering_visualization.ipynb  embedding_pipeline.ipynb  fasttext.ipynb  inference_pipeline.ipynb  knn.ipynb  training_pipeline.ipynb  training_pipeline_updated.ipynb
notebooks/research/: clustering_fixed.ipynb  dataset_clusterized_pipeline.ipynb  fasttext.ipynb  knn_word2vec.ipynb  train_clustering_model.ipynb
web/: app.py  clustering_plot.py  document_processor.py
