[tool.poetry]
name = "rabota-ru"
version = "0.1.0"
description = ""
authors = ["Artem Ponomarenko <slfdstrctd@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "models" },
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
scikit-learn = "^1.3.2"
gensim = "^4.3.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
