[tool.poetry]
name = "rabota-ru"
version = "0.1.0"
description = ""
authors = ["Artem Ponomarenko <slfdstrctd@yandex.ru>"]
readme = "README.md"

packages = [
    { include = "core" },
    { include = "web" }
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
scikit-learn = "^1.3.2"
gensim = "^4.3.2"
nltk = "^3.8.1"
jupyter = "^1.0.0"
catboost = "^1.2.2"
torch = "^2.1.2"
pytorch-lightning = "^2.1.3"
sentence-transformers = "^2.2.2"
optuna = "^3.6.1"
dill = "^0.3.8"
scipy = "<1.13.0"
pypdf = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
order_by_type = true
